--- a/resume/templates/resume/resume_basic copy 2.html
+++ b/resume/templates/resume/resume_basic copy 2.html
@@ -1063,7 +1063,7 @@
 
     //   imagemethod= 'PUT'
     //   var getimage = document.getElementById("uploadimage")
-    //     if(getimage.src.indexOf('NoImage.jpg') !== -1){
+    //     if(getimage.src.indexOf('NoImageBlue.png') !== -1){
 
     //         imagemethod = 'POST'
     //     }
