--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -3,9 +3,7 @@
 {% block content %}
 {% load static %}
 {% block head %}
-<style>
 
-</style>
 {% endblock head %}
 <div class="container">
     <meta name="csrf-token" content="{{ csrf_token }}">
@@ -25,7 +23,7 @@
                     
                       <!-- Button to Open the Modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-                        Open modal
+                        Upload
                     </button>
 
                     <!-- The Modal -->
