--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -11,6 +11,8 @@
 	gtag('config', 'G-ZJXVJ9QG2Q');
 	</script> -->
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <title>{% block title %}Jobs{% endblock %}</title>
 
 
@@ -248,6 +250,7 @@
 					margin-right: 10px;
 				}
 			}
+
         .container {
         width: 100%;
         height: 100%;
