--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -23,7 +23,7 @@
                     
                       <!-- Button to Open the Modal -->
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-                        Upload
+                        Upload image
                     </button>
 
                     <!-- The Modal -->
