--- a/resume/templates/resume/resume_Listskill.html
+++ b/resume/templates/resume/resume_Listskill.html
@@ -68,13 +68,15 @@
             <!-- copied from summary end -->
         </div>
     
-    <div class="btn-group-footer">
+    <footer>
         
-        <a href="{% url 'list-edu' tracking %}" class="btn btn-primary  btn-back js-next-button"> Back</a>
-        <a href="{% url 'create-summary' tracking %}" class="btn btn-default btn-next js-back-button"> Next</a>
+        <a href="{% url 'list-edu' tracking %}" class="btn back-button"> Back</a>
+        <a href="{% url 'create-summary' tracking %}" class="btn next-button"> Next</a>
 
 
-    </div>
+    </footer>
+
+
 </div>
 
   <!-- script for certifications start -->
