--- a/resume/templates/resume/resume_summary.html
+++ b/resume/templates/resume/resume_summary.html
@@ -59,10 +59,12 @@
         </div>
         <!-- end button  -->
 
-        <div class="btn-group-footer">
-            <a href="{% url 'list-skill' tracking %}" class="btn btn-default btn-back js-back-button"> Back</a>
-            <button id="hiddennext"  onclick="submitsummaryform();" class="btn btn-primary btn-next js-next-button" > Next</button>
-        </div>
+        <footer>
+
+            <a href="{% url 'list-skill' tracking %}" class="btn back-button"> Back</a>
+            <button id="hiddennext"  onclick="submitsummaryform();" class="btn next-button" > Next</button>
+  
+        </footer>
 </div>    
 
 <!-- script for summary start -->
