--- a/resume/templates/resume/resume_Listedu.html
+++ b/resume/templates/resume/resume_Listedu.html
@@ -18,13 +18,12 @@
 
     
 
-    <div class="btn-group-footer">
+    <footer>
+        <a href="{% url 'list-work' tracking %}" class="btn back-button"> Back</a>
+        <a href="{% url 'list-skill' tracking %}" class="btn next-button"> Next</a>
+    </footer>
 
-        <a href="{% url 'list-skill' tracking %}" class="btn btn-default btn-next js-back-button"> Next</a>
-        <a href="{% url 'list-work' tracking %}" class="btn btn-primary  btn-back js-next-button"> Back</a>
 
-
-    </div>
 </div>    
 
 {% endblock content %}
