--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -35,17 +35,24 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
-    <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">
-    <link href=" {% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link  href="{% static 'css/bootstrap.min.css' %}"  rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+	<!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+
+		<!-- summart start  -->
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+
+	<!-- summar end -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -58,6 +65,12 @@
 	<script src="https://jsuites.net/v4/jsuites.webcomponents.js"></script>
 	<link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
 	<!-- end jsuites -->
+
+
+	<!-- summart start  -->
+
+
+	<!-- summar end -->
 
     <style type="text/css">
         	#work-information,
@@ -177,7 +190,6 @@
 				width: 100%;
 				height: 100%;
 				border-radius: 10px;
-				text-align: center;
 				position: relative;
 				display: none;
 			}
@@ -223,59 +235,58 @@
 				margin-bottom: 10px;
 			} */
 
-			/* Styles for mobile devices */
-			@media only screen and (max-width: 600px) {
-				input {
-					display: block;
-				}
 
-				label {
-					display: none;
-				}
-
-				input::placeholder {
-					font-size: 1.2em;
-				}
-			}
-
-			/* Styles for larger screens */
-			@media only screen and (min-width: 601px) {
-				input {
-					display: inline-block;
-					margin-right: 10px;
-				}
-
-				label {
-					display: inline-block;
-					margin-right: 10px;
-				}
-			}
 
         .container {
         width: 100%;
         height: 100%;
         border-radius: 10px;
-        text-align: center;
         position: relative;
 	}
 		.jrating .jrating-selected {
 		background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='green'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
 	}
+	.nopadding {
+	padding-left: 5px !important;
+	padding-right: 5px !important;
+
+	}
+	footer {
+	padding: 5px;
+	text-align: center;
+	}
+	.back-button {
+	background-color: #5a6064;
+	border: none;
+	color: white;
+	}
+	.next-button {
+	background-color: #3ba709;
+	border: none;
+	color: white;
+	}
+
+	.mcentre {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	@media (max-width: 768px) {
+	.hide-on-small {
+		display: none;
+	}
+	}
+
+
+	
     </style>
 	{% block head %}
 	{% endblock head %}
     
 </head>
 
-<body onload="savandget()">
+<body onload="savandget()" style="margin: 5px;">
     <div class="container-xxl bg-white p-0">
-        <!-- Spinner Start -->
-        <div id="spinner" class="bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
-        </div>
-        <!-- Spinner End -->
 
 
         <!-- Navbar Start -->
@@ -342,14 +353,10 @@
 
 
      
-
-
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top" ><i class="bi bi-arrow-up"></i></a>
-    </div>
+  </div>
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'lib/wow/wow.min.js' %}"></script>
     <script src="{% static 'lib/easing/easing.min.js'%}"></script>
